[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-spatial-tools"
version = "0.1.0"
description = "Tools for visualizing spatial data in Napari"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "spatialdata",
    "napari-spatialdata",
    "scanpy",
    "napari[all]",
    "zarr",
    "dask",
    "numpy",
]

[project.scripts]
napari-all-slides = "napari_spatial_tools.cli:main"
